# xclibs

./: .gitignore
udbus-intro/: .gitignore  udbus-intro.cabal
udbus-intro/Network/DBus/: Introspect.hs  IntrospectParser.hs
udbus/Network/DBus/: Actions.hs  Message.hs  Signature.hs  Type.hs  Wire.hs
xch-rpc/: xch-rpc.cabal
xch-rpc/Rpc/: Core.hs  DBusArgo.hs  DBusV4V.hs  Dispatch.hs  Domain.hs  Error.hs  Intro.hs  Log.hs  Monad.hs  Remote.hs  Types.hs  Variables.hs
xchargo/: Setup.hs  xchargo.cabal
xchargo/Tools/: Argo.hsc
xchdb/: Setup.hs  xchdb.cabal
xchdb/Tools/: Db.hs
xchdb/Tools/Db/: Core.hs  Marshall.hs
xchutils/: xchutils.cabal
xchutils/Tools/: File.hs  FileC.hsc  FreezeIOM.hs  Future.hs  IfM.hs  JSONTrees.hs  Log.hs  Misc.hs  Periodic.hs  Process.hs  Text.hs
xchv4v/: xchv4v.cabal
xchv4v/Tools/: V4V.hsc
xchwebsocket/: Test.hs  xchwebsocket.cabal
xchwebsocket/Network/: WebSocket.hs
xchxenstore/: xchxenstore.cabal
xchxenstore/Tools/: XenStore.hs  XenStoreC.hsc
xchxenstore/cbits/: xs_helper.c
xclogging/: .gitignore  Makefile.am  autogen.sh  configure.ac  libxclogging-config.src.in  libxclogging.pc.src.in  version-files
xclogging/example/: Makefile.am  testlog.c
xclogging/src/: Makefile.am  backtrace.c  backtrace.h  logging.c  logging.h
xcxenstore/: Makefile.am  autogen.sh  configure.ac  libxcxenstore-config.src.in  libxcxenstore.pc.src.in  version-files  version.sed
xcxenstore/sample/: Makefile.am  teststore.c
xcxenstore/src/: Makefile.am  xcxenstore.c  xcxenstore.h
