name: xch-rpc
version: 0.1
synopsis: Xenclient RPC helpers
license: Proprietary
author: Tomasz Wroblewski
build-type: Simple
cabal-version: >=1.6
category: Network, Desktop
stability: experimental
tested-with: GHC==6.12.1

Flag v4v
  Description:  build with V4V supports
  Default:      True

library
  Build-Depends:
    base,
    time,
    containers,
    process,
    unix,
    text,
    mtl,
    network,
    bytestring,
    utf8-string,
    filepath,
    hsyslog,
    udbus,
    xchutils

  GHC-Options: -O2 -fwarn-incomplete-patterns
  if flag(v4v)
    Build-Depends: xchv4v
    Extra-Libraries: v4v_nointerposer
    cpp-options: -DUSE_V4V

  exposed-modules:
    Rpc.Core
    Rpc.DBusV4V

  other-modules:
    Rpc.Log
    Rpc.Types
    Rpc.Error
    Rpc.Monad
    Rpc.Remote
    Rpc.Domain
    Rpc.Variables
    Rpc.Dispatch
    Rpc.Intro