name: xch-rpc
version: 0.1
synopsis: Xenclient RPC helpers
license: Proprietary
author: Tomasz Wroblewski
build-type: Simple
cabal-version: >=1.6
category: Network, Desktop
stability: experimental
tested-with: GHC==6.12.1

Flag argo
  Description:  build with Argo supports
  Default:      True

library
  Build-Depends:
    base,
    time,
    containers,
    process,
    unix,
    text,
    mtl,
    network,
    bytestring,
    utf8-string,
    filepath,
    hsyslog,
    udbus,
    xchutils

  GHC-Options: -O2 -fwarn-incomplete-patterns
  if flag(argo)
    Build-Depends: xchargo
    Extra-Libraries: argo_nointerposer
    cpp-options: -DUSE_ARGO

  exposed-modules:
    Rpc.Core
    Rpc.DBusArgo

  other-modules:
    Rpc.Log
    Rpc.Types
    Rpc.Error
    Rpc.Monad
    Rpc.Remote
    Rpc.Domain
    Rpc.Variables
    Rpc.Dispatch
    Rpc.Intro
